--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "@headlessui/vue": "^1.7.15",
     "@heroicons/vue": "^2.0.18",
     "@vueform/multiselect": "^2.6.2",
+    "@vueform/toggle": "^2.1.3",
     "autoprefixer": "^10.4.14",
+    "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
-    "vuex": "^4.0.2",
+    "vue-toast-notification": "^3.1.1",
+    "vuex": "^4.1.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
