--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
+    "json-server": "^0.17.3",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
